# pulumi-command

./: .ci-mgmt.yaml  .gitignore  .golangci.yml  .goreleaser.prerelease.yml  .goreleaser.yml  .pulumi.version  Makefile  README.md  create.patch  delete.patch  go.mod  go.sum  mise.toml  update.patch
.github/workflows/: build.yml  command-dispatch.yml  community-moderation.yml  lint.yml  master.yml  prerelease.yml  pull-request.yml  pull_request.yml  regenerate-sdks.yml  release.yml  run-acceptance-tests.yml  weekly-pulumi-update.yml
docs/: _index.md  installation-configuration.md
docs-examples/: README.md
docs-examples/copy-to-remote/: Pulumi.yaml  main.hcl
docs-examples/eks-cleanup/: Pulumi.yaml  main.hcl
docs-examples/invoke-lambda/: Pulumi.yaml  main.hcl
docs-examples/random-local-command/: Pulumi.yaml  main.hcl
examples/: examples_go_test.go  examples_nodejs_test.go  examples_test.go  go.mod  go.sum
examples/aws-py-ec2-command/: __main__.py  myapp.conf  requirements.txt
examples/copyfile-nodejs/: Pulumi.yaml  index.ts  package.json
examples/curl/: Pulumi.yaml  index.ts  (+3 more)
provider/: PulumiPlugin.yaml  go.mod  go.sum
quickstart/: .envrc  Pulumi.yaml  go.mod  go.sum  main.go
sdk/: .gitignore  go.mod  go.sum
sdk/python/: README.md  pyproject.toml  setup.py
sdk/python/pulumi_command/: __init__.py  _inputs.py  command.py  outputs.py  provider.py  pulumi-plugin.json  random.py  remote_command.py
sdk/python/pulumi_command/common/: _enums.py
sdk/python/pulumi_command/local/: __init__.py  _enums.py  command.py  run.py
sdk/python/pulumi_command/remote/: __init__.py  _enums.py  _inputs.py  command.py  copy.py  copy_file.py  copy_to_remote.py  outputs.py
sdk/python/pulumi_xyz/: __init__.py  _tables.py  provider.py  random.py
tests/: go.mod
(+261 files in other folders)
