[project]
  name = "pulumi_command"
  description = "The Pulumi Command Provider enables you to execute commands and scripts either locally or remotely as part of the Pulumi resource model."
  dependencies = ["parver>=0.2.1", "pulumi>=3.0.0,<4.0.0", "semver>=2.8.1"]
  keywords = ["pulumi", "command", "category/utility", "kind/native"]
  readme = "README.md"
  requires-python = ">=3.8"
  version = "0.12.0a1718647559"
  [project.license]
    text = "Apache-2.0"
  [project.urls]
    Homepage = "https://pulumi.com"
    Repository = "https://github.com/pulumi/pulumi-command"

[build-system]
  requires = ["setuptools>=61.0"]
  build-backend = "setuptools.build_meta"

[tool]
  [tool.setuptools]
    [tool.setuptools.package-data]
      pulumi_command = ["py.typed", "pulumi-plugin.json"]
